# This file is in the public domain.

helpdir = $(datadir)/@PACKAGE@/help

help_DATA = a abt ah arg2 args b bang bug c cc ccmisc chardel charins colon \
	com comdir comsyn d dir e eh elp equal f g h i j k l list ln m      \
	motion n o o- oa oc od of og oh oi ok ol olm om os ot ou ov ow ox   \
	oy oz p pat patex q quote r rpt s scan serc shell specl t termchar  \
	tilde u v w x y z

EXTRA_DIST = $(help_DATA)
